Design: DatePicker 모달창 레이아웃 조정

--- a/front-end/flory/src/index.css
+++ b/front-end/flory/src/index.css
@@ -48,6 +48,7 @@ html {
 }
 
 body {
+  position: relative;
   /* font-family: "Open Sans", sans-serif; */
   font-family: "GmarketSansMedium";
   height: 100%;
@@ -107,4 +108,16 @@ p {
   font-weight: var(--font-regular);
   color: var(--color-black);
   margin: 4px 0;
+}
+
+.datepicker-modal {
+  max-width: 480px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.datepicker.default {
+  margin: auto;
+  width: 100%;
+  max-width: 480px;
 }
