Fix: 일기 리스트 배경화면 보여주는 로직 변경

--- a/front-end/flory/src/components/Garden/GardenCalendar/styles.css
+++ b/front-end/flory/src/components/Garden/GardenCalendar/styles.css
@@ -173,9 +173,9 @@
   width: 350px;
   max-width: 100%;
   margin: auto;
+  transition: all 0.3s linear;
 }
 .calendar__wrapper:hover {
   transform: scale(1.05);
-  transition: ease-out 0.5s;
   cursor: pointer;
 }
