--- a/front-end/flory/src/components/Garden/GardenCalendar/styles.css
+++ b/front-end/flory/src/components/Garden/GardenCalendar/styles.css
@@ -2,9 +2,11 @@
   width: 350px;
   max-width: 100%;
   margin: auto;
-  background: rgba(255, 255, 255, 0.785);
-  border: 1px solid transparent;
-  border-radius: 10px;
+  background: rgba(255, 255, 255);
+  /* background: transparent; */
+  /* border: 1px solid transparent; */
+  border-radius: 20px;
+
   line-height: 3em;
 }
 
@@ -65,12 +67,15 @@
   text-align: center;
   font-weight: bolder;
   font-size: 0.8em;
-  background-color: rgba(255, 255, 255, 0.606);
-  border-radius: 10px 10px 0 0;
+  background-color: #dbafff;
+  /* background-color: rgba(255, 255, 255, 0.606); */
+  border-radius: 20px 20px 0 0;
 }
 
 .react-calendar__month-view__weekdays__weekday {
   padding: 0.5em;
+  color: #ffffff;
+  /* color: #636363; */
 }
 
 /* .react-calendar__month-view__weekNumbers .react-calendar__tile {
@@ -81,7 +86,12 @@
   font-weight: bold;
 } */
 
+.react-calendar__month-view__days__day {
+  color: rgb(146, 77, 171);
+}
+
 .react-calendar__month-view__days__day--weekend {
+  /* color: white; */
   color: #d93332;
 }
 
