Update: 메인 화면 레이아웃 완료

--- a/front-end/flory/src/index.css
+++ b/front-end/flory/src/index.css
@@ -63,6 +63,8 @@ html {
   font-style: normal;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Niconne&display=swap");
+
 body {
   position: relative;
   /* font-family: "Open Sans", sans-serif; */
