--- a/front-end/flory/src/index.css
+++ b/front-end/flory/src/index.css
@@ -81,7 +81,7 @@ html {
 
 @font-face {
   font-family: "S-CoreDream-4Regular";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4regular.woff")
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff")
     format("woff");
   font-weight: normal;
   font-style: normal;
