--- a/front-end/flory/src/components/Garden/GardenCalendar/styles.css
+++ b/front-end/flory/src/components/Garden/GardenCalendar/styles.css
@@ -1,11 +1,14 @@
 .react-calendar {
   /* width: 350px;
   max-width: 100%; */
-  width: 100%;
-  background: rgba(255, 255, 255);
-  /* background: transparent; */
+  width: 90%;
+  margin: 0 auto;
+  /* background: rgba(255, 255, 255); */
+  background: rgba(255, 255, 255, 0.2);
   /* border: 1px solid transparent; */
   border-radius: 10px;
+  border: solid 2px white;
+  box-shadow: #f2d2ff 0px 0px 7px 2px;
 
   line-height: 2rem;
 }
@@ -67,7 +70,9 @@
   text-align: center;
   font-weight: bolder;
   font-size: 0.8em;
-  background-color: #dbafff;
+  border-bottom: solid 2px white;
+  box-shadow: #ffffff 0px 0px 7px 1px;
+  /* background-color: #dbafff; */
   /* background-color: rgba(255, 255, 255, 0.606); */
   border-radius: 10px 10px 0 0;
 }
@@ -75,6 +80,7 @@
 .react-calendar__month-view__weekdays__weekday {
   padding: 0.5em;
   color: #ffffff;
+  font-weight: bold;
   /* color: #636363; */
 }
 
@@ -87,12 +93,14 @@
 } */
 
 .react-calendar__month-view__days__day {
-  color: rgb(146, 77, 171);
+  color: rgb(255, 255, 255);
+  font-weight: bold;
 }
 
 .react-calendar__month-view__days__day--weekend {
   /* color: white; */
-  color: #d93332;
+  color: #b32929;
+  font-weight: bold;
 }
 
 /* .react-calendar__month-view__days__day--neighboringMonth {
@@ -122,11 +130,12 @@
   background-color: transparent;
 } */
 
-/* .react-calendar__tile--now { */
-/* background: #f87676; */
-/* border-radius: 50%; */
-/* color: white; */
-/* } */
+.react-calendar__tile--now abbr {
+  background: #ff9d00;
+  border-radius: 2px;
+  /* border-radius: 50%; */
+  color: black;
+}
 
 /* .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
