Design: 배경화면 디자인 및 메인 화면 디자인 변경

--- a/front-end/flory/src/App.css
+++ b/front-end/flory/src/App.css
@@ -7,11 +7,36 @@
   border-style: solid;
   border-color: #e1e1e1;
   overflow-y: auto;
+  z-index: 100;
 }
 
 @media (max-width: 480px) {
   .app {
     max-width: none;
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 930px) and (max-width: 1023px) {
+  .app {
+    transform: translateX(10vw);
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1079px) {
+  .app {
+    transform: translateX(12vw);
+  }
+}
+
+@media screen and (min-width: 1080px) and (max-width: 1180px) {
+  .app {
+    transform: translateX(14vw);
+  }
+}
+
+@media screen and (min-width: 1181px) {
+  .app {
+    transform: translateX(17vw);
   }
 }
