--- a/front-end/flory/src/index.css
+++ b/front-end/flory/src/index.css
@@ -423,3 +423,9 @@ p {
 ::-webkit-scrollbar {
   display: none;
 }
+
+.swal2-container {
+  max-width: 480px !important;
+  margin: 0 auto !important;
+  /* border-radius: 5px; */
+}
